--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 \usepackage[section]{placeins}
 
 \thesistitle
-{Automation of Bar/ Pub Back-end Business Processes including Inventory Management, Accounting and Tax Compliance}
+{Automation of Public House/ Bar Back-end Business Processes including Inventory Management, Accounting and Tax Compliance}
 
 {}
 \thesisauthor{Dimitri Saridakis}{Author}
