--- a/main.tex
+++ b/main.tex
@@ -1,12 +1,13 @@
 
-
 \documentclass[color]{tumphthesis}
-
 \usepackage{epigraph}
 \usepackage[section]{placeins}
 
+\usepackage{tikz}
+\usetikzlibrary{calc}
+
 \thesistitle
-{Kubernetes Observability}
+{Automation of Public House Back-end Business Processes}
 
 {}
 \thesisauthor{Dimitri Saridakis}{Author}
@@ -42,8 +43,8 @@
 \raggedright%
 
 \include{chap1}
-% \include{chap2}
-% \include{chap3}
+\include{chap2}
+\include{chap3}
 % \include{chap4}
 % \include{chap5}
 
